menu column : the final version of a new version (no more footer but flex rows)

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -78,10 +78,10 @@ crossorigin=""/>
 </div>
 
 <div class="row h-25 align-items-start">
-  <div class="col-12">
+  <div class="col-12 align-self-end">
     <div class="text-underline font-weight-bold text-size-1-5vw  mt-5 mb-2  d-none d-sm-none d-md-block">Trouver une matière première&nbsp;:&nbsp;</div>
   </div>
-  <div class="col-12 text-center">
+  <div class="col-12 text-center align-self-start">
   <!--Recherche -->
   <form class="" action="" autocomplete="off" id="searchForm">
     <input id="searchinput" type="search" class="my-search-bar  form-control" placeholder="Nom (botanique) ou N°CAS..." />
@@ -92,7 +92,7 @@ crossorigin=""/>
 <div class="row h-25 align-items-center  text-center">
   <div class="col">
 <!--<div class="col-12"><button class="btn btn text-underline" type="button" data-toggle="modal" data-target="#lesNouveautes">Découvrez les nouveautés !</button></div>-->
-  <button class="btn  text-underline font-weight-bold  mt-3 mb-5 px-0  text-in-color-brown text-in-size-16px" type="button" data-toggle="modal" data-target="#lesCollaborateurs">Ils nous soutiennent</button>
+  <button class="btn  text-underline font-weight-bold  mt-5 mb-5 px-0  text-in-color-brown text-in-size-16px" type="button" data-toggle="modal" data-target="#lesCollaborateurs">Ils nous soutiennent</button>
 </div>
 </div>
 <div class="row h-25 align-items-end">
@@ -114,7 +114,7 @@ crossorigin=""/>
 
 </div>
 
-<div class="copyright m-top-15-percent" class="row  d-none d-sm-none d-md-block">
+<div class="copyright m-top-15-percent mb-3  row  d-none d-sm-none d-md-block">
   <sup>©</sup> Copyright 2019 |  ScenTree  | All Rights Reserved |
 </div>
 
