added close button to some modals

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1682,6 +1682,10 @@ Limit content of polynuclear aromatic hydrocarbons (PAH) resulting from the use 
 
 </div>
 
+<div class="modal-footer">
+  <button class="btn btn-secondary mx-auto" data-dismiss="modal">Fermer</button>
+</div> <!-- fin footer -->
+
 </div>
 </div>
 </div>
@@ -1709,6 +1713,10 @@ Limit content of polynuclear aromatic hydrocarbons (PAH) resulting from the use 
 </div>
 </div>
 </div>
+
+<div class="modal-footer">
+  <button class="btn btn-secondary mx-auto" data-dismiss="modal">Fermer</button>
+</div> <!-- fin footer -->
 
 </div>
 </div>
