added some text to the IFRA modal

--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1211,6 +1211,11 @@ crossorigin=""/>
 
 <div class="modal-body text-size-14px text-justify scrollbar-inside">
 
+	<p>Fondé en 1973, l’IFRA (<i>International Fragrance Association</i>) est une association qui représente l’industrie du parfum à l’international et qui a développé et implémenté un Code de
+	Pratique permettant d’<b>Assurer que les parfums soient sans danger pour le consommateur</b>. </p>
+	<p>Les standards émis par l’association peuvent limiter ou interdire l’utilisation de certains ingrédients de parfums, et permettent aux fabricants d’émettre un <b>certificat IFRA</b>. Ce dernier permet au fabricant d’assurer à son client que son produit est conforme aux standards de l’industrie. </p>
+	<p>Depuis 2015, les standards à prendre en compte sont ceux du <b>48 th amendement</b>. Attention cependant, le 49 th arrive prochainement. </p>
+<p>Afin de vous fournir de plus amples informations sur la classification des produits finis dans les catégories ici, nous avons réunis les principaux produits dans ce tableau : </p>
 <div class="table-responsive-sm"><table>
    <caption class="caption">Liste des produits finis regroupés par catégories</caption> 
         <tr>
@@ -1263,6 +1268,7 @@ crossorigin=""/>
         </tr>
 </table></div>
 
+<p class="mt-5">Une partie du travail de l’association est également d’interdire l’utilisation d’ingrédients dangereux pour le consommateur. Ne pouvant donc pas les insérer dans notre classification, nous vous présentons la liste de ces substances ci-dessous : </p>
 <div class="table-responsive-sm"><table class="table">
    <caption class="caption">Liste des produits interdits d'utilisation par l'IFRA</caption> 
         <tr>
