removed the border around 'Ils nous soutiennent'

--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -92,7 +92,7 @@ crossorigin=""/>
 <div class="row h-25 align-items-center  text-center">
   <div class="col">
 <!--<div class="col-12"><button class="btn btn text-underline" type="button" data-toggle="modal" data-target="#lesNouveautes">Découvrez les nouveautés !</button></div>-->
-  <button class="btn  text-underline font-weight-bold  mt-5 mb-5 px-0  text-in-color-brown text-in-size-16px  with-my-border" type="button" data-toggle="modal" data-target="#lesCollaborateurs">Ils nous soutiennent</button>
+  <button class="btn  text-underline font-weight-bold  mt-5 mb-5 px-0  text-in-color-brown text-in-size-16px" type="button" data-toggle="modal" data-target="#lesCollaborateurs">Ils nous soutiennent</button>
 </div>
 </div>
 <div class="row h-25 align-items-end">
