--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -131,8 +131,8 @@ crossorigin=""/>
 <div id="RGPD_warning" class="col-sm-10 col-md-10 col-lg-10 col-xl-10">
 <div id="blanc1" class="row blockrgpd"></div>
 <div id="contenant" class="row">
-<div class=" col-lg-offset-1 col-xs-9 col-sm-9 col-md-9 col-lg-8 textRGPD" ><p><i>Notre site internet utilise des cookies à des fins de statistiques, de perfomances et de sécurité. Ces données anonymes nous permettent de vous offrir une expérience de navigation optimale. Vous pouvez toutefois désactiver les cookies dans les paramètres de votre navigateur.</i></p></div> 
-<div class=" col-lg-offset-1 col-lg-2 boutonRGPD">
+<div class=" col-offset-1 col-8 textRGPD" ><p><i>Notre site internet utilise des cookies à des fins de statistiques, de perfomances et de sécurité. Ces données anonymes nous permettent de vous offrir une expérience de navigation optimale. Vous pouvez toutefois désactiver les cookies dans les paramètres de votre navigateur.</i></p></div> 
+<div class=" col-offset-1 col-2 boutonRGPD">
   <button class="btn btn-success" id="cookie_please">Accepter et continuer</button><button class="btn btn-default btn-md NONRGPD" id="no_cookie">Non</button>
 </div>
 </div>
