my first buttons to switch to english or french version

--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr" class="h-100">
+<html class="h-100">
 <head>
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -50,10 +50,10 @@ crossorigin=""/>
     <button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesCollaborateurs">Ils nous soutiennent</button>
     <button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesContacts">Contacts</button>
     <button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesSources">Sources</button>
-    <!--<div class="btn-group btn-group-toggle" data-toggle="buttons">
+    <div class="btn-group btn-group-toggle" data-toggle="buttons">
       <label class="btn btn-primary active"><input type="radio" name="options" id="option1" autocomplete="off" checked />FR</label>
       <label class="btn btn-primary"><input type="radio" name="options" id="option2" autocomplete="off" checked />EN</label>
-    </div>-->
+    </div>
     <button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesMentionsLegales">Mentions Légales</button>
     <a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/"><img src="../img/LI-In-Bug.png" alt="vers notre linkedIn" class="img-fluid max-height-20px" /></a> <a class="instagram_button" href="https://www.instagram.com/scentree_/"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid max-height-20px" /></a> <a class="twitter_button" href="https://www.twitter.com/Scentree1"><img src="../img/Twitter_Logo_Blue.png" alt="vers notre Twitter" class="img-fluid max-height-20px" /></a>
   </div>
@@ -74,12 +74,14 @@ crossorigin=""/>
 <div class="container-fluid">
 
 <div class="row h-25 align-items-start">
-  <button class="btn mt-4" type="button" data-toggle="modal" data-target="#decouvrirScenTree"><img id="logo-image" class="img-fluid logomenu boutonclickable" src="../img/logob.png" alt="le logo de Scentree"></button>
+	  <button class="btn to_english_button" type="button">EN</button>
+	  <button class="btn to_french_button" type="button">FR</button>
+	  <button class="btn" type="button" data-toggle="modal" data-target="#decouvrirScenTree"><img id="logo-image" class="img-fluid logomenu boutonclickable" src="../img/logob.png" alt="le logo de Scentree"></button>
 </div>
 
 <div class="row h-25 align-items-start">
   <div class="col-12 align-self-end">
-    <div class="text-underline font-weight-bold text-size-1-5vw  mt-5 mb-2  d-none d-sm-none d-md-block">Trouver une matière première&nbsp;:&nbsp;</div>
+	  <div class="text-underline font-weight-bold text-size-1-5vw  mt-5 mb-2  d-none d-sm-none d-md-block"><span lang="fr">Trouver une matière première&nbsp;:&nbsp;</span><span lang="en">Find a MP&nbsp;:&nbsp</span></div>
   </div>
   <div class="col-12 text-center align-self-start">
   <!--Recherche -->
