enable video modal again

--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -490,7 +490,7 @@ crossorigin=""/>
 </div>
 
 
-<!--MODAL VIDEO--><!--
+<!--MODAL VIDEO-->
 <div class="modal" tabindex="-1" role="dialog" id="Vidéo">
 <div class="modal-dialog modal-lg" role="document">
 <div class="modal-content">
@@ -506,7 +506,7 @@ crossorigin=""/>
 
 </div>
 </div>
-</div>-->
+</div>
 
 
 <!-- MODAL DESCRIPTEURS -->
