--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -51,8 +51,8 @@ crossorigin=""/>
     <button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesContacts"><span lang="fr">Contacts</span><span lang="en">Contacts</span></button>
     <button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesSources"><span lang="fr">Sources</span><span lang="en">Sources</span></button>
     <div class="btn-group btn-group-toggle" data-toggle="buttons">
-      <label class="btn btn-primary active"><input type="radio" name="options" id="option1" autocomplete="off" checked />FR</label>
-      <label class="btn btn-primary"><input type="radio" name="options" id="option2" autocomplete="off" checked />EN</label>
+      <label class="btn btn-primary to_french_radio_input"><input type="radio" name="options" id="option1" autocomplete="off" checked />FR</label>
+      <label class="btn btn-primary to_english_radio_input"><input type="radio" name="options" id="option2" autocomplete="off" checked />EN</label>
     </div>
     <button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesMentionsLegales"><span lang="fr">Mentions Légales</span><span lang="en">Legal Mentions</span></button>
     <a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/"><img src="../img/LI-In-Bug.png" alt="vers notre linkedIn" class="img-fluid max-height-20px" /></a> <a class="instagram_button" href="https://www.instagram.com/scentree_/"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid max-height-20px" /></a> <a class="twitter_button" href="https://www.twitter.com/Scentree1"><img src="../img/Twitter_Logo_Blue.png" alt="vers notre Twitter" class="img-fluid max-height-20px" /></a>
@@ -74,9 +74,12 @@ crossorigin=""/>
 <div class="container-fluid">
 
 <div class="row h-25 align-items-start">
-	  <button class="btn to_english_button" type="button">EN</button>
-	  <button class="btn to_french_button" type="button">FR</button>
-	  <button class="btn" type="button" data-toggle="modal" data-target="#decouvrirScenTree"><img id="logo-image" class="img-fluid logomenu boutonclickable" src="../img/logon.png" alt="le logo de Scentree"></button>
+	<div class="clearfix w-100">
+	  <button class="btn to_english_button text-in-color-brown float-right" type="button">EN</button>
+	  <button class="btn text-in-color-brown float-right px-0">/</button>
+	  <button class="btn to_french_button text-in-color-brown float-right" type="button">FR</button>
+	</div>
+	<button class="btn" type="button" data-toggle="modal" data-target="#decouvrirScenTree"><img id="logo-image" class="img-fluid logomenu boutonclickable" src="../img/logon.png" alt="le logo de Scentree"></button>
 </div>
 
 <div class="row h-25 align-items-start">
