--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -355,7 +355,7 @@ crossorigin=""/>
 
 <!--MODAL ILS NOUS SOUTIENNENT ex-COLLABORATEURS ex-CREDITS -->  
 <div class="modal" tabindex="-1" role="dialog" id="lesCollaborateurs">
-<div class="modal-dialog modal-lg" role="document">
+<div class="modal-dialog modal-xl" role="document">
 <div class="modal-content">
  
 <div class="modal-header d-block">
