default tab is now 'présentation générale

--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -595,7 +595,7 @@ crossorigin=""/>
 <div class="tab-content">
   
   <!--Onglet présentation générale-->
-<div class="tab-pane fade" id="tab1info" role="tabpanel" aria-labelledby="pills-tab1">
+<div class="tab-pane fade show active" id="tab1info" role="tabpanel" aria-labelledby="pills-tab1">
 <div class="container-fluid">
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-lg-4  panelcontent" >
@@ -775,7 +775,7 @@ crossorigin=""/>
 </div>
 
 <!-- Onglet Fournisseurs -->
-<div class="tab-pane fade show active" id="tab6info"  role="tabpanel" aria-labelledby="pills-tab6">
+<div class="tab-pane fade" id="tab6info"  role="tabpanel" aria-labelledby="pills-tab6">
 <div class="container-fluid">
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 panelcontent">
@@ -845,7 +845,7 @@ crossorigin=""/>
 <div class="tab-content">
   
   <!--Onglet présentation générale-->
-<div class="tab-pane fade" id="tab12info" role="tabpanel" aria-labelledby="pills-tab-synthetiques-1">
+<div class="tab-pane fade show active" id="tab12info" role="tabpanel" aria-labelledby="pills-tab-synthetiques-1">
 <div class="container-fluid panelcontent">
 <div class="row">
 <div class="col-12 col-sm-12 col-lg-4 blockdonnees">
@@ -1018,7 +1018,7 @@ crossorigin=""/>
 </div>
 
 <!-- onglet fournisseurs -->
-<div class="tab-pane fade show show active" id="tab11info" role="tabpanel" aria-labelledby="pills-tab-synthetiques-5">
+<div class="tab-pane fade" id="tab11info" role="tabpanel" aria-labelledby="pills-tab-synthetiques-5">
 <div class="container-fluid">
 <div class="row">
 <div class="col-lg-12">
