--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -38,7 +38,7 @@ crossorigin=""/>
 	  <img src="../img/search1.png" class="max-height-30px" alt="Rechercher …" />
   </button>
   <form action="" autocomplete="off"  class="dropdown-menu dropdown-menu-right p-0" aria-labelledby="dropdownSearchButton-sm">
-    <div class=""><input lang="fr" id="searchinput-sm" type="search" class="my-search-bar  form-control" placeholder="Nom (botanique) ou N°CAS..." /><input lang="en" id="searchinput-sm" type="search" class="my-search-bar  form-control" placeholder="Name (botanical) or CAS N°..." /></div>
+    <div class=""><input lang="fr" type="search" class="searchinput-sm  my-search-bar  form-control" placeholder="Nom (botanique) ou N°CAS..." /><input lang="en" type="search" class="searchinput-sm  my-search-bar  form-control" placeholder="Name (botanical) or CAS N°..." /></div>
   </form>
 </div>
 <div class="dropdown pl-1">
@@ -89,7 +89,8 @@ crossorigin=""/>
   <div class="col-12 text-center align-self-start">
   <!--Recherche -->
   <form class="" action="" autocomplete="off" id="searchForm">
-    <input id="searchinput" type="search" class="my-search-bar  form-control" placeholder="Nom (botanique) ou N°CAS..." />
+    <input lang="fr" type="search" class="searchinput  my-search-bar  form-control" placeholder="Nom (botanique) ou N°CAS..." />
+    <input lang="en" type="search" class="searchinput  my-search-bar  form-control" placeholder="Name (botanical) or CAS N°..." />
   </form>
   </div>
 </div>
