--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -581,11 +581,11 @@ crossorigin=""/>
   
   <div class="collapse navbar-collapse" id="navbarForNaturelles">
   <ul id="ongletsnat" class="navbar-nav nav nav-pills nav-justified  mx-auto" role="tablist">
-    <li class="nav-item"><a href="#tab1info" data-toggle="pill" aria-controls="tab1info" aria-selected="false" class="nav-link" id="pills-tab1">Présentation Générale</a></li>
+    <li class="nav-item"><a href="#tab1info" data-toggle="pill" aria-controls="tab1info" aria-selected="true" class="nav-link active" id="pills-tab1">Présentation Générale</a></li>
     <li class="nav-item"><a href="#tab2info" data-toggle="pill" aria-controls="tab2info" aria-selected="false" class="nav-link" id="pills-tab2">Botanique Origine Extraction</a></li>
     <li class="nav-item"><a href="#tab3info" data-toggle="pill" aria-controls="tab3info" aria-selected="false" class="nav-link" id="pills-tab3">Réglementation</a></li>
     <li class="nav-item"><a href="#tab4info" data-toggle="pill" aria-controls="tab4info" aria-selected="false" class="nav-link" id="pills-tab4">Autres Remarques</a></li>
-    <li class="nav-item"><a href="#tab6info" data-toggle="pill" aria-controls="tab6info" aria-selected="true" class="nav-link active" id="pills-tab6">Fournisseurs</a></li>
+    <li class="nav-item"><a href="#tab6info" data-toggle="pill" aria-controls="tab6info" aria-selected="false" class="nav-link" id="pills-tab6">Fournisseurs</a></li>
   </ul>
   </div>
 </nav>
@@ -831,11 +831,11 @@ crossorigin=""/>
   
   <div class="collapse navbar-collapse" id="navbarForSynthetiques">
   <ul id="ongletssynth" class="navbar-nav nav nav-pills nav-justified  mx-auto" role="tablist">
-    <li class="nav-item"><a href="#tab12info" data-toggle="pill" aria-controls="tab12info" aria-selected="false" class="nav-link" id="pills-tab-synthetiques-1">Présentation Générale</a></li>
+    <li class="nav-item"><a href="#tab12info" data-toggle="pill" aria-controls="tab12info" aria-selected="true" class="nav-link active" id="pills-tab-synthetiques-1">Présentation Générale</a></li>
     <li class="nav-item"><a href="#tab7info" data-toggle="pill" aria-controls="tab7info" aria-selected="false" class="nav-link" id="pills-tab-synthetiques-2">Obtention  Chimie</a></li>
     <li class="nav-item"><a href="#tab8info" data-toggle="pill" aria-controls="tab8info" aria-selected="false" class="nav-link" id="pills-tab-synthetiques-3">Réglementation</a></li>
     <li class="nav-item"><a href="#tab10info" data-toggle="pill" aria-controls="tab10info" aria-selected="false" class="nav-link" id="pills-tab-synthetiques-4">Autres Remarques</a></li>
-    <li class="nav-item"><a href="#tab11info" data-toggle="pill" aria-controls="tab11info" aria-selected="true" class="nav-link active" id="pills-tab-synthetiques-5">Fournisseurs</a></li>
+    <li class="nav-item"><a href="#tab11info" data-toggle="pill" aria-controls="tab11info" aria-selected="false" class="nav-link" id="pills-tab-synthetiques-5">Fournisseurs</a></li>
   </ul>
   </div>
 </nav>
