All natural modal translated

--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -665,21 +665,24 @@ crossorigin=""/>
 <div class="row">
 <div class="col-12">
 
-  <p><span><b lang="fr">IFRA <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) recommande des utilisations maximales pour certaines matières premières dans leur produit fini. L'avis donné par cette association possède une grande valeur dans le milieu du parfum. Respecter les normes IFRA est gage de qualité et de sécurité à l'emploi du parfum."></sup> :</b><span id="modalbody-ifra" class="textitem"></span></span></p>
+  <p><span><b lang="fr">IFRA <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) recommande des utilisations maximales pour certaines matières premières dans leur produit fini. L'avis donné par cette association possède une grande valeur dans le milieu du parfum. Respecter les normes IFRA est gage de qualité et de sécurité à l'emploi du parfum."></sup><span><b lang="en">IFRA <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides maximum uses for some raw materials in finished products. The notices given by this association have a great value in the perfume industry. Respecting IFRA standards is a guarantee of quality and security when using the perfume."></sup> :</b>
+    <span id="modalbody-ifra" class="textitem"></span></span></p>
   
 <div class="container-fluid">
 <div class="row">
 <div class="col-12">
 <div class="blockifra1">
-  <p class="amendment"><span><b lang="fr">Amendement <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b><span id="modalbody-amendment" class="textitem"></span></span></p>
+  <p class="amendment"><span><b lang="fr">Amendement <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup><span><b lang="en">Amendment <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b><span id="modalbody-amendment" class="textitem"></span></span></p>
   <br>
-  <p class="commentaires"><span><b lang="fr">Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients. Les mentions suivantes sont valables pour une utilisation à forte dose de la matière première, ou en cas de sensibilité particulièrement élevée à cette matière première. Son utilisation en parfumerie étant restreinte, ces risques sont évités dans le cas des parfums."></sup> :</b><span id="modalbody-commentifra" class="textitem"></span></span></p>
+  <p class="commentaires"><span><b lang="fr">Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients. Les mentions suivantes sont valables pour une utilisation à forte dose de la matière première, ou en cas de sensibilité particulièrement élevée à cette matière première. Son utilisation en parfumerie étant restreinte, ces risques sont évités dans le cas des parfums."></sup><span><b lang="en">Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions. The following mentions are valid for a high use of the raw material, or in case of hish sensitiveness for the raw material. Its use in perfumery being restricted, these risks are avoided in perfumes."></sup> :</b>
+    <span id="modalbody-commentifra" class="textitem"></span></span></p>
 </div>
 
 <div class="blocktable">
   <div class="table-responsive text-center"><table class="table1">
     <!-- TITRE DU TABLEAU-->
-    <caption class="caption"> Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</caption> 
+    <caption class="caption" lang="fr"> Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</caption> 
+    <caption class="caption" lang="en"> Maximum usage according to the product category :</caption> 
     <!-- EN-TETE DU TABLEAU-->
     <tr>
       <th>Cat.1</th>
@@ -712,7 +715,8 @@ crossorigin=""/>
   
   <table class="table2">
     <!-- TITRE DU TABLEAU-->
-    <caption class="caption"> Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</caption> 
+    <caption class="caption" lang="fr"> Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</caption> 
+    <caption class="caption" lang="en"> Maximum usage according to the product category :</caption> 
     <!-- EN-TETE DU TABLEAU-->
     <tr>
       <th colspan="2">En contact avec la peau</th>
@@ -732,7 +736,8 @@ crossorigin=""/>
   
   <table class="table3">
     <!-- TITRE DU TABLEAU-->
-    <caption class="caption">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</caption> 
+    <caption class="caption" lang="fr"> Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</caption> 
+    <caption class="caption" lang="en"> Maximum usage according to the product category :</caption> 
     <!-- EN-TETE DU TABLEAU-->
     <tr>
       <th>Fine fragrance</th>
@@ -760,7 +765,7 @@ crossorigin=""/>
 </div>
 </div>
 
-<p class="item"><span><b lang="fr">Allergènes <sup class="fas fa-question-circle iconetab" title="Il existe 26 allergènes en parfumerie. Leur utilisation est limitée à 10 ppm dans le produit fini pour les produits non rincés (eaux de toilette par exemple), contre 100 ppm pour les produits rincés (gels douche par exemple). Une réaction allergique à un allergène de parfumerie et cosmétiques n'apparaît que pour 1 à 3% de la population européenne (source : CSSC). Il est donc rare d'être allergique à l'une de ces substances. Quoi qu'il en soit, les allergènes ont une utilisation limitée dans les produits parfumés, pour éviter toute réaction à ces produits."></sup> :</b><span id="modalbody-allergenes" class="textitem"></span></span></p>
+<p class="item"><span><b lang="fr">Allergènes <sup class="fas fa-question-circle iconetab" title="Il existe 26 allergènes en parfumerie. Leur utilisation est limitée à 10 ppm dans le produit fini pour les produits non rincés (eaux de toilette par exemple), contre 100 ppm pour les produits rincés (gels douche par exemple). Une réaction allergique à un allergène de parfumerie et cosmétiques n'apparaît que pour 1 à 3% de la population européenne (source : CSSC). Il est donc rare d'être allergique à l'une de ces substances. Quoi qu'il en soit, les allergènes ont une utilisation limitée dans les produits parfumés, pour éviter toute réaction à ces produits."></sup><span><b lang="en">Allergens <sup class="fas fa-question-circle iconetab" title="26 allergens are known in perfumery. Their use is limited to 10 ppm in finished products for non-rinced products (eaux de toilette for example), and 100 ppm for rinced products (shower gels for example)."></sup> :</b><span id="modalbody-allergenes" class="textitem"></span></span></p>
 
 </div>    
 </div>   
@@ -772,9 +777,11 @@ crossorigin=""/>
 <div class="container-fluid">
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 panelcontent">
-  <p class="item"><span><b lang="fr">Utilisation <sup class="fas fa-question-circle iconetab" title="Types de parfums et d'accords auxquels la matière première peux être associée."></sup> :</b><span id="modalbody-utilisation" class="textitem"></span></span></p>
+  <p class="item"><span><b lang="fr">Utilisation <sup class="fas fa-question-circle iconetab" title="Types de parfums et d'accords auxquels la matière première peux être associée."></sup><span><b lang="en">Uses in perfumery <sup class="fas fa-question-circle iconetab" title="Type of accords and perfumes the raw material can be associated with."></sup> :</b>
+    <span id="modalbody-utilisation" class="textitem"></span></span></p>
   
-  <p class="item"><span><b lang="fr">Commentaires et anecdotes <sup class="fas fa-question-circle iconetab" title="Autres commentaires sur la matière première"></sup> : </b><span id="modalbody-remarques" class="textitem"></span></span></p>
+  <p class="item"><span><b lang="fr">Commentaires et anecdotes <sup class="fas fa-question-circle iconetab" title="Autres commentaires sur la matière première"></sup><span><b lang="en">Other comments <sup class="fas fa-question-circle iconetab" title="Additional remarks concerning the raw material."></sup> : </b>
+    <span id="modalbody-remarques" class="textitem"></span></span></p>
 </div>
 </div> 
 </div>
@@ -785,7 +792,7 @@ crossorigin=""/>
 <div class="container-fluid">
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 panelcontent">
-  <p class="textitem"><span class="fournisseurs">Vous <u>commercialisez</u> des matières premières présentes dans la classification ScenTree et vous souhaitez que nos utilisateurs le sachent ? <br>Merci de rentrer en contact avec l'adresse mail suivante : <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span></p>
+  <p class="textitem"><span class="fournisseurs" lang="fr">Vous <u>commercialisez</u> des matières premières présentes dans la classification ScenTree et vous souhaitez que nos utilisateurs le sachent ? <br>Merci de rentrer en contact avec l'adresse mail suivante : <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span><span class="fournisseurs" lang="en">You are <u>commercializing</u> some of the raw materials present in <i><b>ScenTree</b></i> classification and you would like our users to know it? Please contact this email address: <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span></p>
 </div>
 </div>
 </div>
@@ -796,7 +803,7 @@ crossorigin=""/>
 </div>  <!--fin body-->
 
 <div class="modal-footer">
-  <button class="btn btn-secondary mx-auto" data-dismiss="modal">Fermer</button>
+  <button class="btn btn-secondary mx-auto" data-dismiss="modal"><span lang="fr">Fermer</span><span lang="en">Close</span></button>
 </div> <!--fin footer-->
 
 </div> <!--fin content-->
